--- a/app/pages/inicio/inicio.page.html
+++ b/app/pages/inicio/inicio.page.html
@@ -9,14 +9,14 @@
         ></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>RegistraPP</ion-title>
+    <ion-title class="title">RegistraPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">RegistraPP</ion-title>
+      <ion-title size="large" class="title">RegistraPP</ion-title>
     </ion-toolbar>
   </ion-header>
 
