--- a/app/pages/profesor/profesor.page.html
+++ b/app/pages/profesor/profesor.page.html
@@ -27,7 +27,9 @@
     </ion-item>
 
   </ion-list>
-
+<div>
+  <br>
+  <br>
   <ion-button (click)="Saludar()" expand="block" fill="solid" color="warning" shape="round">
     Ingresar
   </ion-button>
@@ -35,6 +37,6 @@
   <ion-button routerLink="/registro" expand="block" color="primary" shape="round">
     Registrarse
   </ion-button>
-
+</div>
 </div>
 </ion-content>
